# ocean-runner

./: .bumpversion.toml  .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: package-testing.yaml  pypi-publish.yaml
_data/inputs/: algoCustomData.json
_data/transformations/: algorithm
ocean_runner/: __init__.py  config.py  entrypoint.py  runner.py
tests/: test_add.py  test_entrypoint.py  test_runner.py
