[project]
name = "pypi-package-template"
version = "0.1.0"
description = "A Python PyPI package template"
authors = [{ name = "John Doe", email = "john.doe@foo.bar" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

# [project.urls]
# Homepage = ""
# Issues = ""

[tool.pytest.ini_options]
pythonpath = "pypi-package-template"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pypi-package-template"]

[tool.hatch.build.targets.wheel]
include = ["pypi-package-template"]

[tool.mypy]
strict = true
warn_return_any = true
disallow_any_explicit = true

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4"]
