[project]
name = "ocean-runner"
version = "0.1.0"
description = "A Python PyPI package template"
authors = [{ name = "John Doe", email = "john.doe@foo.bar" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["oceanprotocol-job-details==0.2.4"]

[project.urls]
Homepage = "https://github.com/AgrospAI/ocean-runner"
Issues = "https://github.com/AgrospAI/ocean-runner/issues"

[tool.pytest.ini_options]
pythonpath = "ocean-runner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["ocean-runner"]

[tool.hatch.build.targets.wheel]
include = ["ocean-runner"]

[tool.mypy]
strict = true
warn_return_any = true
disallow_any_explicit = true

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4"]
