[project]
name = "ocean-runner"
version = "0.3.4"
description = "A fluent API for OceanProtocol algorithms"
authors = [
    { name = "AgrospAI", email = "agrospai@udl.cat" },
    { name = "Christian López", email = "christian.lopez@udl.cat" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiofiles>=25.1.0",
    "oceanprotocol-job-details>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.2",
    "returns[compatible-mypy]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/AgrospAI/ocean-runner"
Issues = "https://github.com/AgrospAI/ocean-runner/issues"

[project.scripts]
ocean-execute = "ocean_runner.entrypoint:main"

[tool.pytest.ini_options]
log_level = "INFO"
log_cli = true
pythonpath = "ocean_runner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "mypy<1.18.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.hatch.build.targets.sdist]
include = ["ocean_runner"]

[tool.hatch.build.targets.wheel]
packages = ["ocean_runner"]

[tool.hatch.build.targets.wheel.package-data]
ocean_runner = ["py.typed"]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin", "pydantic.mypy"]
